<resources>
    <string name="app_name">Squirtle</string>
    <string name="action_settings">Settings</string>
    <string name="squirtle_api">https://squirtleapi.herokuapp.com</string>
    <string name="squirtle_api_endpoint">/api/v1</string>
    <string name="squirtle_api_endpoint_login">/login</string>
    <string name="squirtle_api_endpoint_signup">/usuario</string>
    <string name="squirtle_api_endpoint_usuario">/usuario/%d</string>
    <string name="squirtle_api_endpoint_dispositivo">/dispositivo</string>
    <string name="squirtle_api_endpoint_dispositivo_id">/dispositivo/%d</string>


    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Squirtle - Login</string>
    <string name="signup_fragment_label">Squirtle - Cadastro</string>
    <string name="forgot_fragment_label">Squirtle - Esqueci minha Senha</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="nome_text_hint">Nome</string>
    <string name="sobrenome_text_hint">Sobrenome</string>
    <string name="email_text_hint">Email</string>
    <string name="senha_text_hint">Senha</string>
    <string name="confirmar_senha_text_hint">Confirmar Senha</string>

    <string name="login_text">Login</string>
    <string name="cadastrar_text">Cadastrar</string>
    <string name="signup_text">Não tem conta? Criar Conta</string>

    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="redefinir_senha">Redefinir Senha</string>
    <string name="nova_senha_text_hint">Nova Senha</string>
    <string name="nova_confirmar_senha_text_hint">Confirmar Nova Senha</string>

    <string name="tentando_login">Tentando fazer Login...</string>

    <!--MODULES-->
    <string name="modules_toolbar_title">Squirtle</string>


    <!--    Dispositivos-->
    <string name="dispositivos_toolbar_title">Meus dispositivos</string>

    <!--    Novo Dispositivo-->
    <string name="novodispositivo_toolbar_title">Novo Dispositivo</string>
    <string name="novodispositivo_name">Nome do Dispositivo</string>
    <string name="novodispositivo_descricao">Descrição</string>
    <string name="novodispositivo_status">Status</string>
    <string name="novodispositivo_wifi_ssid">SSID do Wifi</string>
    <string name="novodispositivo_wifi_pass">Senha do Wifi</string>
    <string name="novodispositivo_tipo_solo">Tipo de Solo</string>
    <string name="novodispositivo_tipo_plantacao">Tipo de Plantação</string>

    <!--  Atualizar Dispositivo  -->
    <string name="atualizardispositivo_toolbar_title">Atualizar Dispositivo</string>

    <!--  Link Iot  -->
    <string name="iotlink_toolbar_title">Dados do Dispositivo</string>


    <!--    Tipo de Solos-->
    <string-array name="novodispositivo_tipo_solo_menu">
        <item>Arenoso</item>
        <item>Argiloso</item>
        <item>Humoso</item>
        <item>Cálcario</item>
    </string-array>


    <!--    Detalhe do Dispositivo-->
    <string name="device_detail_toolbar_title">Dispositivo - %s</string>
    <string name="title_activity_iot_link">IotLinkActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>