<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NovoDispositivo">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Squirtle.AppBarOverlay"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/novodispositivo_toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Squirtle.PopupOverlay"
            app:navigationIcon="@drawable/home"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="5dp"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nomeLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/novodispositivo_name"
                    app:layout_constraintBottom_toTopOf="@+id/descricaoLayout"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/nomeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descricaoLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/novodispositivo_descricao"
                    app:layout_constraintBottom_toTopOf="@id/switch_status"
                    app:layout_constraintTop_toBottomOf="@id/nomeLayout">

                    <EditText
                        android:id="@+id/descricaoText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textLongMessage|textMultiLine" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/novodispositivo_status"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descricaoLayout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wifi_ssid_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/novodispositivo_wifi_ssid"
                    app:layout_constraintTop_toBottomOf="@+id/switch_status">

                    <EditText
                        android:id="@+id/wifi_ssid_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wifi_pass_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/novodispositivo_wifi_pass"
                    app:layout_constraintTop_toBottomOf="@+id/wifi_ssid_layout">

                    <EditText
                        android:id="@+id/wifi_pass_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    app:dividerInsetEnd="16dp"
                    app:dividerInsetStart="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/tipo_solo_menu"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wifi_pass_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tipo_solo_menu"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:hint="@string/novodispositivo_tipo_solo"
                    app:layout_constraintBottom_toTopOf="@+id/time_slider"
                    app:layout_constraintTop_toBottomOf="@+id/wifi_pass_layout">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"

                        />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.slider.Slider
                    android:id="@+id/time_slider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="10.0"
                    android:valueFrom="0.0"
                    android:valueTo="100.0"
                    app:layout_constraintBottom_toTopOf="@+id/submitDevice"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tipo_solo_menu" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submitDevice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/cadastrar_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time_slider"></com.google.android.material.button.MaterialButton>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>